service_b/k8_deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: serviceb
spec:
  clusterIP: None
  ports:
  - name: envoy-web
    port: 8789
    targetPort: 8789
  selector:
    app: serviceb
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: serviceb
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: serviceb
    spec:
      containers:
      - name: serviceb
        image: gcr.io/envoy_servicemesh/serviceb:latest
        ports:
        - containerPort: 8082
          name: svc-port
          protocol: TCP
      - name: envoy
        image: envoyproxy/envoy:v1.7.0
        ports:
          - containerPort: 9901
            protocol: TCP
            name: envoy-admin
          - containerPort: 8789
            protocol: TCP
            name: envoy-web
        volumeMounts:
          - name: envoy-config-volume
            mountPath: /etc/envoy-config/
        command: ["/usr/local/bin/envoy"]
        args: ["-c", "/etc/envoy-config/envoy-config.yaml", "--v2-config-only", "-l", "info","--service-cluster","serviceb","--service-node","serviceb", "--log-format", "[METADATA][%Y-%m-%d %T.%e][%t][%l][%n] %v"]
      volumes:
        - name: envoy-config-volume
          configMap:
            name: sidecar-config-b
            items:
              - key: envoy-config
                path: envoy-config.yaml
